# epochcore_RAS

./: .coveragerc  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .protection_manifest  AGENT_SYNC_README.md  AUTONOMOUS_MANIFEST.md  BUSINESS.md  CEILING_FEATURES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_REPOSITORY_AUTOMATION_GUIDE.md  DEVELOPMENT.md  DISTRIBUTIONBLAST.txt  Dockerfile  EPOCHMESHOPERATER_README.md  ETHICAL_ARCHITECTURE.md  FOUNDER_CROWN_raid_mega_capsule.json  FOUNDER_CROWN_raid_mega_capsule.legendseal.txt  LICENSE  MANIFEST.in  MERGE_PR_TEMPLATE.md  MISSION.md  MONETIZATION.md  Makefile  OWNERSHIP.md  PR_MANAGEMENT_GUIDE.md  README.md  README_RECURSIVE_AUTONOMY.md  README_STRIPE_AGENT.md  RECURSIVE_IMPROVEMENT_README.md  SECURITY.md  SELF_IMPROVEMENT.md  STRATEGYDECK_README.md  TERMS.md  WORKFLOW_RESOLUTION_SUMMARY.md  agent_backup.py  (+290 more)
.autonomous/: config.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  SECURITY.md  copilot-instructions.md  daily_backtest.cron  pull_request_template.md
FounderALPHA/: README.md
StategyDECK/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
agent_prompts/: cognitive_agent_prompt.md  ethical_agent_prompt.md  evolution_agent_prompt.md  quantum_agent_prompt.md  resilience_agent_prompt.md
agents/: agent_registry.py  agent_utils.py  audit_evolution_manager.py  compliance_auditor.py  explainability_agent.py  failure_remediation_agent.py  innovation_diffuser.py  kpi_prediction_agent.py  meta_experiment_cascade.py  portfolio_optimizer.py  resource_allocation_agent.py  user_feedback_engine.py
automation/: performance_tracker.py  repo_monitor.py  security_scanner.py
blockchain/: __init__.py  mechanics_manager.py  mesh_credit.py  mesh_credit_glyph.py  mesh_credit_immutable.py  mesh_tokenomics.py
business/: metrics.py
chmod +x founder_pack_autopush.sh ./: founder_pack_autopush.sh
config/: agent_registry.yaml  batch_propagation_example.yml  continuity_ritual.yaml  cross_repo_config.yml  env_loader.py  icon_config.json  merge_automation.yaml  payment_gateway_setup.py  system_settings.yaml  vault_settings.yaml  workflow_resolver.yaml
configs/: agent_registry_config.yaml  continuity_config.yaml  dashboard_config.yaml  merge_config.yaml  populate_config.yaml
data/: epoch_triggers_merged.jsonl  epoch_triggers_merged_edges.csv  game_vocabulary.json  pricing_history.json
docs/: AGENT_SYNC_GUIDE.md  AI_AGENT.md  ANIMATION_SYSTEM.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_IMPROVEMENT.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_REPO_PROPAGATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENDLESS_GLYPH_SYSTEM.md  ENDLESS_GLYPH_SYSTEM_README.md  ENHANCED_ICON_SYSTEM.md  FLASH_SYNC_AEPOCH_ALPHA_SPEC.md  GAME_INTEGRATION.md  ICON_GENERATION_ENHANCED.md  INTEGRATED_AGENT_SYSTEM.md  KIDS_FRIENDLY_AI_GUIDE.md  LAUNCH_STRATEGY.md  PRICING.md  PRODUCTS.md  RAS_API.md  TROUBLESHOOTING.md  WORKFLOWS.md  api_reference.md  architecture.md  deployment_guide.md  developer_guide.md  index.md  installation.md  troubleshooting.md  unified_icon_generator.md  user_guide.md
(+1243 files in other folders)
