[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategyDECK"
version = "1.0.0"
description = "A brand asset management and workflow automation tool"
authors = [
    { name = "StrategyDECK Team", email = "info@strategydeck.com" }
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/yourusername/StategyDECK"
Documentation = "https://strategydeck.readthedocs.io/"
Repository = "https://github.com/yourusername/StategyDECK"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
addopts = "-v --cov=. --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
