[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "epochcore-ras"
version = "1.0.0"
description = "EpochCore Recursive Autonomous Software System"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "EpochCore Team", email = "team@epochcore.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "psutil>=5.9.5",
    "rich>=13.0.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/epochcore/ras"
Repository = "https://github.com/epochcore/ras.git"
Documentation = "https://epochcore.github.io/ras/"

[tool.setuptools]
packages = ["recursive_improvement", "recursive_improvement.engines"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=recursive_improvement --cov-report=term-missing"
